fixed spacing within projects container

--- a/styles.css
+++ b/styles.css
@@ -191,14 +191,26 @@ button:hover {
     display: grid;
     grid-template-columns: 3fr 1fr;
     gap: 1rem;
+    margin: 2rem 1.5rem;
 }
 
 .projects {
     display: flex;
     flex-direction: column;
+    gap: 1rem;
+}
+
+.project-heading {
+    font-size: 1.2rem;
+    font-weight: 500;
 }
 
 .project-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1.5rem;
+}
+
+.trending {
+    grid-column: 2;
 }
